# CMIMSunit

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  generate_demo_file.py
data/: flat.csv  random.csv
data/mims_unit/: create_raw.py
include/: mims_unit.h
src/: CMakeLists.txt  Makefile  cli.c  mims_aggregate.c  mims_aggregate.h  mims_combine_axes.c  mims_combine_axes.h  mims_extrapolate.c  mims_extrapolate.h  mims_filter.c  mims_filter.h  mims_helper.c  mims_helper.h  mims_unit.c  mims_unit.h
src/seq/: seq.c
src/signal/: CMakeLists.txt  arma.c  arma.h  bilinear.c  bilinear.h  butter.c  butter.h  filter.c  filter.h  poly.c  poly.h  sftrans.c  sftrans.h
src/stats/: CMakeLists.txt  approx.c  approx.h  pgamma.c  pgamma.h  smspline.c  smspline.h  spline.c  spline.h
src/trapz/: CMakeLists.txt  trapz.c  trapz.h
tests/: basic_tests.c  basic_tests.h  demo.c
tst/: Makefile  basic_tests.c  basic_tests.h  demo.c  stats_smspline_test.py  stats_spline_test.py
